--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fairgraph"
-version = "0.10.0.dev.test_peyman"
+version = "0.10.0.peyman_dev.0"
 description = "Python API for the Human Brain Project Knowledge Graph"
 readme = "README.md"
 authors = [
